editing the profile page, layout broken -- needs to be fixed

--- a/web/app/assets/stylesheets/application.css
+++ b/web/app/assets/stylesheets/application.css
@@ -15,7 +15,9 @@ html {overflow-y: scroll}
 #content {margin-top: 60px}
 h1 {margin-bottom: 20px}
 .help-inline {color: red}
-.news-column, .section {min-height:20px; padding:15px; margin-bottom:20px; background-color:#f5f5f5; -webkit-box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.05);-moz-box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.05);box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.05)}
+.news-column, .section, {min-height:20px; padding:15px; margin-bottom:20px; background-color:#f5f5f5; -webkit-box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.05);-moz-box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.05);box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.05)}
+.dev-profile-columns {min-height:300px; padding:15px; margin-bottom:20px; background-color:#f5f5f5; -webkit-box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.05);-moz-box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.05);box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.05)}
 .headshot {text-align: center; padding: 10px 0; margin-bottom:20px; background-color:#f5f5f5; -webkit-box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.05);-moz-box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.05);box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.05)}
 #upload-button {padding: 3px 5px}
 #footer p {padding: 30px 0 40px}
+
